# scum-code

./: .bazelrc  .clang-format  .gitignore  .pre-commit-config.yaml  README.md  WORKSPACE  WORKSPACE.bazel
analysis/scum/adc/: BUILD.bazel  adc_characterization_main.py  adc_config.py
analysis/scum/adc/capacitor/: BUILD.bazel  adc_capacitor_main.py  adc_capacitor_scope_cleanup_main.py
analysis/scum/adc/capacitor/data/: BUILD.bazel  scope_10uf.csv  scope_10uf_250mv.csv  scope_10uf_250mv_without_scum.csv  scope_10uf_500mv.csv  scope_10uf_500mv_without_scum.csv  scope_10uf_750mv.csv  scope_10uf_750mv_without_scum.csv  scope_10uf_with_100_cycles.csv  scope_10uf_with_100_cycles_without_scum.csv  scope_10uf_with_10_cycles.csv  scope_10uf_with_10_cycles_without_scum.csv  scope_10uf_with_20_cycles.csv  scope_10uf_with_20_cycles_without_scum.csv  scope_10uf_with_50_cycles.csv  scope_10uf_with_50_cycles_without_scum.csv  scope_10uf_without_scum.csv  scope_1uf.csv  scope_1uf_with_100_cycles.csv  scope_1uf_with_100_cycles_without_scum.csv  scope_1uf_with_10_cycles.csv  scope_1uf_with_10_cycles_without_scum.csv  scope_1uf_with_20_cycles.csv  scope_1uf_with_20_cycles_without_scum.csv  scope_1uf_with_50_cycles.csv  scope_1uf_with_50_cycles_without_scum.csv  scope_1uf_without_scum.csv
analysis/scum/adc/data/: BUILD  BUILD.bazel  adc_characterization_data_l35.csv  adc_characterization_data_m2.csv
analysis/scum/adc/enob/: BUILD.bazel  adc_data.py  adc_enob_main.py  adc_enob_scope_averaging_main.py  adc_enob_scope_cleanup_main.py  adc_enob_scope_main.py  adc_enob_scope_vs_frequency_main.py
analysis/scum/adc/enob/data/: BUILD.bazel  adc_data_10000hz.csv  adc_data_1000hz.csv  adc_data_100hz.csv  adc_data_10hz.csv  adc_data_1hz.csv  adc_data_2000hz.csv  adc_data_200hz.csv  adc_data_20hz.csv  adc_data_2hz.csv  adc_data_5000hz.csv  adc_data_500hz.csv  adc_data_50hz.csv  adc_data_5hz.csv  adc_data_with_scope_10000hz.csv  adc_data_with_scope_1000hz.csv  adc_data_with_scope_100hz.csv  adc_data_with_scope_10hz.csv  adc_data_with_scope_1hz.csv  adc_data_with_scope_2000hz.csv  adc_data_with_scope_200hz.csv  adc_data_with_scope_20hz.csv  adc_data_with_scope_2hz.csv  adc_data_with_scope_5000hz.csv  adc_data_with_scope_500hz.csv  adc_data_with_scope_50hz.csv  adc_data_with_scope_5hz.csv  scope_10000hz.csv  scope_1000hz.csv  scope_100hz.csv  scope_10hz.csv  scope_1hz.csv  scope_2000hz.csv  scope_200hz.csv  scope_20hz.csv  scope_2hz.csv  scope_500hz.csv  (+3 more)
analysis/scum/adc/mux/: BUILD.bazel  adc_mux_main.py
analysis/scum/adc/nitrate_sensor/: BUILD  adc_averaging_main.py  adc_sampling_main.py  adc_stairstep_main.py  adc_variations_main.py
analysis/scum/adc/noise/: BUILD.bazel  adc_noise_main.py
analysis/scum/adc/oect/: BUILD  adc_oect_main.py
analysis/scum/adc/sensor/: BUILD.bazel  adc_averaging_main.py  adc_sampling_main.py  adc_stairstep_main.py  adc_variations_main.py
analysis/scum/radio/rx/: BUILD.bazel  rx_if_main.py
analysis/scum/radio/tuning/: BUILD.bazel  tuning_code.py  tuning_codes_main.py
openmote/jlink/: BUILD.bazel  jlink_interface.py  jlink_interface_main.py  jlink_programmer.py  jlink_programmer_main.py
openwsn/: BUILD.bazel  hdlc.py  hdlc_aggregator.py  hdlc_test.py  openserial_interface.py  openserial_interface_logger_main.py  openserial_monitor_main.py
scum/utils/: BUILD  BUILD.bazel  nrf_bootloader.py  nrf_bootloader_main.py
simulation/cic_filter/: BUILD.bazel  averaging_snr_main.py  cic_filter_comb_main.py  cic_filter_decimator.py  cic_filter_main.py  fir_windowing_main.py
simulation/differential_mesh/: BUILD.bazel  differential_mesh_analysis_main.py  differential_mesh_analysis_square_main.py  differential_mesh_graph.py  differential_mesh_graph_factory.py  differential_mesh_graph_factory_main.py  differential_mesh_grid.py  differential_mesh_grid_main.py  differential_mesh_grid_spice_main.py  differential_mesh_iterative_solver_main.py  differential_mesh_simulator.py  differential_mesh_simulator_main.py  differential_mesh_solver.py  differential_mesh_solver_main.py  differential_mesh_standard_error_main.py
simulation/differential_mesh/data/: BUILD.bazel  example_2x2.edgelist  example_3x3_zero.edgelist  grid_standard_errors.csv  num_iterations_10x10.csv  num_iterations_20x20.csv  square_standard_errors.csv
tapeout/clocks/: BUILD.bazel  analog_clock_main.py  clock_power_main.py  digital_clock_spectrum_main.py
tapeout/clocks/data/: BUILD.bazel  analog_clock_measured.csv  analog_clock_schematic_simulated.csv  analog_clock_simulated.csv  digital_clock_spectrum_measured.csv
tapeout/power/: BUILD.bazel  bgr_main.py  iref_main.py  ldo_main.py  switched_cap_main.py
tapeout/power/data/: BUILD.bazel  bgr_default_measured.csv  bgr_default_simulated.csv  bgr_measured.csv  bgr_simulated.csv  bgr_vref_control_measured.csv  bgr_vref_control_simulated.csv  iref_ext_measured.csv  iref_ext_simulated.csv  iref_vs_vref_measured.csv  iref_vs_vref_simulated.csv  ldo_analog_measured_chip13.csv  ldo_analog_measured_chip5.csv  ldo_analog_simulated.csv  ldo_digital_measured_chip13.csv  ldo_digital_measured_chip5.csv  ldo_digital_simulated.csv  ldo_rf_measured.csv  ldo_rf_measured_chip14.csv  ldo_rf_simulated.csv
tapeout/rf/: BUILD.bazel  lo_spectrum_main.py
tapeout/rf/data/: BUILD.bazel  lo_spectrum_1_63ghz_measured.csv  lo_spectrum_startup_measured.csv
utils/: BUILD  BUILD.bazel  priority_queue.py  serial_interface.py  struct.py  struct_test.py
utils/network/: BUILD.bazel  s1p_viewer.py  s1p_viewer_main.py
utils/ni_daq/: BUILD  voltage_logger.py  voltage_logger_main.py
utils/plotter/: BUILD.bazel  adc_data_live_plotter_main.py  dummy_live_plotter.py  dummy_live_plotter_main.py  live_plotter.py  serial_live_plotter.py
utils/regression/: BUILD  BUILD.bazel  exponential_regression.py  linear_regression.py  logarithmic_regression.py  parabolic_regression.py  polynomial_regression.py  regression.py
utils/serial/: BUILD.bazel  serial_interface.py  serial_logger.py  serial_logger_main.py  serial_monitor.py  serial_monitor_main.py
utils/visualization/: BUILD.bazel  color_maps.py
(+106 files in other folders)
