load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "nrf_bootloader",
    srcs = ["nrf_bootloader.py"],
    deps = [
        "//utils/serial:serial_interface",
        requirement("absl-py"),
    ],
)

py_binary(
    name = "nrf_bootloader_main",
    srcs = ["nrf_bootloader_main.py"],
    deps = [
        ":nrf_bootloader",
        requirement("absl-py"),
    ],
)

pkg_tar(
    name = "nrf_bootloader_main_tar_pkg",
    extension = ".tar.gz",
    include_runfiles = True,
    srcs = [":nrf_bootloader_main"],
    strip_prefix = "/scum/utils/",
)
