load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "cic_filter_main",
    srcs = ["cic_filter_main.py"],
    deps = [
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
        requirement("SciencePlots"),
    ],
)

py_binary(
    name = "cic_filter_comb_main",
    srcs = ["cic_filter_comb_main.py"],
    deps = [
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
        requirement("SciencePlots"),
    ],
)
