load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "averaging_snr_main",
    srcs = ["averaging_snr_main.py"],
    deps = [
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
        requirement("SciencePlots"),
    ],
)

py_library(
    name = "cic_filter_decimator",
    srcs = ["cic_filter_decimator.py"],
    deps = [requirement("numpy")],
)

py_binary(
    name = "cic_filter_main",
    srcs = ["cic_filter_main.py"],
    deps = [
        ":cic_filter_decimator",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
        requirement("SciencePlots"),
    ],
)

py_binary(
    name = "cic_filter_comb_main",
    srcs = ["cic_filter_comb_main.py"],
    deps = [
        ":cic_filter_decimator",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
        requirement("SciencePlots"),
    ],
)
