load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "differential_mesh_analysis_main",
    srcs = ["differential_mesh_analysis_main.py"],
    data = ["//simulation/differential_mesh/data:standard_errors"],
    deps = [
        "//utils/visualization:color_maps",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
        requirement("pandas"),
        requirement("SciencePlots"),
    ],
)

py_binary(
    name = "differential_mesh_analysis_square_main",
    srcs = ["differential_mesh_analysis_square_main.py"],
    data = ["//simulation/differential_mesh/data:standard_errors"],
    deps = [
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
        requirement("pandas"),
        requirement("SciencePlots"),
    ],
)

py_library(
    name = "differential_mesh_graph_factory",
    srcs = ["differential_mesh_graph_factory.py"],
    deps = [
        ":differential_mesh_grid",
        requirement("networkx"),
    ],
)

py_library(
    name = "differential_mesh_grid",
    srcs = ["differential_mesh_grid.py"],
    deps = [
        requirement("matplotlib"),
        requirement("networkx"),
        requirement("numpy"),
    ],
)

py_binary(
    name = "differential_mesh_grid_main",
    srcs = ["differential_mesh_grid_main.py"],
    data = ["//simulation/differential_mesh/data:example_edge_lists"],
    deps = [
        ":differential_mesh_graph_factory",
        ":differential_mesh_grid",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("SciencePlots"),
    ],
)

py_binary(
    name = "differential_mesh_grid_spice_main",
    srcs = ["differential_mesh_grid_spice_main.py"],
    deps = [
        ":differential_mesh_graph_factory",
        ":differential_mesh_grid",
        requirement("absl-py"),
    ],
)

py_library(
    name = "differential_mesh_solver",
    srcs = ["differential_mesh_solver.py"],
    deps = [
        ":differential_mesh_grid",
        "//utils:priority_queue",
        requirement("absl-py"),
        requirement("networkx"),
        requirement("numpy"),
    ],
)

py_binary(
    name = "differential_mesh_solver_main",
    srcs = ["differential_mesh_solver_main.py"],
    data = ["//simulation/differential_mesh/data:example_edge_lists"],
    deps = [
        ":differential_mesh_graph_factory",
        ":differential_mesh_grid",
        ":differential_mesh_solver",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("SciencePlots"),
    ],
)

py_library(
    name = "differential_mesh_simulator",
    srcs = ["differential_mesh_simulator.py"],
    deps = [
        ":differential_mesh_grid",
        ":differential_mesh_solver",
        requirement("networkx"),
        requirement("numpy"),
    ],
)

py_binary(
    name = "differential_mesh_simulator_main",
    srcs = ["differential_mesh_simulator_main.py"],
    data = ["//simulation/differential_mesh/data:example_edge_lists"],
    deps = [
        ":differential_mesh_graph_factory",
        ":differential_mesh_simulator",
        ":differential_mesh_solver",
        "//utils/visualization:color_maps",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
        requirement("SciencePlots"),
    ],
)
