load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "exponential_regression",
    srcs = ["exponential_regression.py"],
    deps = [
        ":regression",
        requirement("absl-py"),
        requirement("numpy"),
        requirement("scipy"),
    ],
)

py_library(
    name = "linear_regression",
    srcs = ["linear_regression.py"],
    deps = [
        ":regression",
        requirement("numpy"),
    ],)

py_library(
    name = "parabolic_regression",
    srcs = ["parabolic_regression.py"],
    deps = [
        ":polynomial_regression",
        requirement("numpy"),
    ],)

py_library(
    name = "polynomial_regression",
    srcs = ["polynomial_regression.py"],
    deps = [
        ":regression",
        requirement("numpy"),
    ],
)

py_library(
    name = "regression",
    srcs = ["regression.py"],
    deps = [requirement("numpy")],
)
