package(default_visibility = ["//visibility:public"])

filegroup(
    name = "example_edge_lists",
    srcs = glob(["example_*.edgelist"]),
)

filegroup(
    name = "num_iterations",
    srcs = [
        "num_iterations_10x10.csv",
        "num_iterations_20x20.csv",
    ],
)


filegroup(
    name = "standard_errors",
    srcs = [
        "grid_standard_errors.csv",
        "square_standard_errors.csv",
    ],
)
