package(default_visibility = ["//visibility:public"])

filegroup(
    name = "analog_clock_data",
    srcs = [
        "analog_clock_measured.csv",
        "analog_clock_schematic_simulated.csv",
    ],
)

filegroup(
    name = "digital_clock_spectrum_data",
    srcs = ["digital_clock_spectrum_measured.csv"],
)
