load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "adc_mux_main",
    srcs = ["adc_mux_main.py"],
    data = ["//analysis/scum/adc/mux/data:adc_mux_data"],
    deps = [
        "//analysis/scum/adc:adc_config",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
        requirement("pandas"),
    ],
)
