package(default_visibility = ["//visibility:public"])

filegroup(
    name = "adc_sensor_data",
    srcs = [
        "adc_data_ammonium_0217_am1.csv",
        "adc_data_ammonium_0217_am2.csv",
        "adc_data_nitrate_0217_no1.csv",
        "adc_data_nitrate_0217_no2.csv",
        "adc_data_nitrate_iii_1.csv",
        "adc_data_nitrate_iii_2.csv",
        "adc_data_nitrate_vi_1.csv",
        "adc_data_nitrate_vi_2.csv",
    ],
)

filegroup(
    name = "adc_sensor_sampling_data",
    srcs = [
        "adc_data_nitrate_vi_1_sampling.csv",
        "adc_data_nitrate_vi_2_sampling.csv",
    ],
)
