load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "adc_transient_main",
    srcs = ["adc_transient_main.py"],
    data = ["//analysis/scum/adc/sensor/resistive/data:adc_resistive_data"],
    deps = [
        "//utils/regression:exponential_regression",
        "//utils/regression:linear_regression",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
        requirement("pandas"),
        requirement("scipy"),
    ],
)
